--- a/cartucheras.html
+++ b/cartucheras.html
@@ -53,6 +53,8 @@
     </header>
 
     <section id="products" class="py-5 bg-light">
+      <div class="container text-center">
+        <div class="row align-items-center">
       <div class="container">
         <div class="text-container">
           <h3 class="linea"><span>Cartucheras</span></h3>
@@ -63,7 +65,7 @@
             <div class="card">
               <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.10.11.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">$15000</p>
                 <a href="#" class="btn btn-primary">Ver más</a>
               </div>
             </div>
@@ -72,7 +74,7 @@
             <div class="card">
               <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.10.26.jpeg" class="card-img-top" width="250px" height="250px" alt="...">
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">$8000</p>
                 <a href="#" class="btn btn-primary">Ver más</a>
               </div>
             </div>
@@ -81,7 +83,7 @@
             <div class="card">
               <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.11.35.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">$12000</p>
                 <a href="#" class="btn btn-primary">Ver más</a>
               </div>
             </div>
@@ -94,7 +96,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.11.48.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$12000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -103,7 +105,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.11.49.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$10000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -112,7 +114,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.11.50.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$10000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -121,7 +123,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.11.53.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$9000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -130,7 +132,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.12.01.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$10000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -139,7 +141,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.12.27.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$12000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -148,7 +150,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.12.28.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$12000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -156,7 +158,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.12.29.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$12000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -165,7 +167,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.12.33.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$15000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -173,7 +175,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.12.34.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$15000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -182,7 +184,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.12.35.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$15000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -191,7 +193,7 @@
         <div class="card">
           <img src="assets/img/cartucheras/WhatsApp Image 2024-04-29 at 09.12.40.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$15000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
