--- a/neceser.html
+++ b/neceser.html
@@ -54,6 +54,8 @@
     </header>
  
     <section id="products" class="py-5 bg-light">
+      <div class="container text-center">
+        <div class="row align-items-center">
       <div class="container">
         <div class="text-container">
           <h3 class="linea"><span>Neceser</span></h3>
@@ -64,7 +66,7 @@
             <div class="card">
               <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.10.23.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">$7000</p>
                 <a href="#" class="btn btn-primary">Ver más</a>
               </div>
             </div>
@@ -73,7 +75,7 @@
             <div class="card">
               <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.11.37.jpeg" class="card-img-top" width="250px" height="250px" alt="...">
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">$12000</p>
                 <a href="#" class="btn btn-primary">Ver más</a>
               </div>
             </div>
@@ -82,7 +84,7 @@
             <div class="card">
               <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.11.56.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">$12000</p>
                 <a href="#" class="btn btn-primary">Ver más</a>
               </div>
             </div>
@@ -95,7 +97,7 @@
         <div class="card">
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.11.57.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$12000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -104,7 +106,7 @@
         <div class="card">
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.23.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$9000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -113,7 +115,7 @@
         <div class="card">
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.25.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$9000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -122,7 +124,7 @@
         <div class="card">
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.26.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$9000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -131,7 +133,7 @@
         <div class="card">
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.30.jpeg"  class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$9000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -140,7 +142,7 @@
         <div class="card">
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.32.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$8000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -149,7 +151,7 @@
         <div class="card">
           <img src="assets/img/neceser/WhatsApp Image 2024-04-29 at 09.12.51 (1).jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$8000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
