--- a/portanotebook.html
+++ b/portanotebook.html
@@ -53,6 +53,8 @@
     </header>
 
     <section id="products" class="py-5 bg-light">
+      <div class="container text-center">
+        <div class="row align-items-center">
       <div class="container">
         <div class="text-container">
           <h3 class="linea"><span>Porta Notebook</span></h3>
@@ -63,7 +65,7 @@
             <div class="card">
               <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.09.49.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">$15000</p>
                 <a href="#" class="btn btn-primary">Ver más</a>
               </div>
             </div>
@@ -72,7 +74,7 @@
             <div class="card">
               <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.09.52.jpeg" class="card-img-top" width="250px" height="250px" alt="...">
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">$16000</p>
                 <a href="#" class="btn btn-primary">Ver más</a>
               </div>
             </div>
@@ -81,7 +83,7 @@
             <div class="card">
               <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.11.32.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
               <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">$15000</p>
                 <a href="#" class="btn btn-primary">Ver más</a>
               </div>
             </div>
@@ -94,7 +96,7 @@
         <div class="card">
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.11.33.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$17000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -103,7 +105,7 @@
         <div class="card">
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.11.34.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$18000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -112,7 +114,7 @@
         <div class="card">
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.13.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$20000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -121,7 +123,7 @@
         <div class="card">
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.50.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$25000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -130,7 +132,7 @@
         <div class="card">
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.51.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$20000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -139,7 +141,7 @@
         <div class="card">
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.56.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$25000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
@@ -148,7 +150,7 @@
         <div class="card">
           <img src="assets/img/portanotebook/WhatsApp Image 2024-04-29 at 09.12.57.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
           <div class="card-body">
-            <p class="card-text"></p>
+            <p class="card-text">$9000</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
