--- a/products.html
+++ b/products.html
@@ -55,6 +55,8 @@
 
     <section id="products" class="py-5 bg-light">
         <div class="container">
+          <div class="container text-center">
+            <div class="row align-items-center">
           <div class="text-container">
             <h3 class="linea"><span>Nuestros productos</span></h3>
           </div>
@@ -64,7 +66,7 @@
               <div class="card">
                 <img src="assets/img/WhatsApp Image 2024-04-29 at 09.09.49.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
                 <div class="card-body">
-                  <p class="card-text"></p>
+                  <p class="card-text">$25000</p>
                   <a href="#" class="btn btn-primary">Ver más</a>
                 </div>
               </div>
@@ -73,7 +75,7 @@
               <div class="card">
                 <img src="assets/img/WhatsApp Image 2024-04-29 at 09.09.52.jpeg" class="card-img-top" width="250px" height="250px" alt="...">
                 <div class="card-body">
-                  <p class="card-text"></p>
+                  <p class="card-text">$25000</p>
                   <a href="#" class="btn btn-primary">Ver más</a>
                 </div>
               </div>
@@ -82,7 +84,7 @@
               <div class="card">
                 <img src="assets/img/WhatsApp Image 2024-04-29 at 09.10.11.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
                 <div class="card-body">
-                  <p class="card-text"></p>
+                  <p class="card-text">$25000</p>
                   <a href="#" class="btn btn-primary">Ver más</a>
                 </div>
               </div>
@@ -95,7 +97,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.10.23.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$23000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -104,7 +106,7 @@
           <div class="card">
           <img src="assets/img/WhatsApp Image 2024-04-29 at 09.10.26.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$12000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -113,7 +115,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.57.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$9000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -122,7 +124,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.33.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$7000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -131,7 +133,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.34.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$25000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -140,7 +142,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.35.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$25000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -149,7 +151,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.37.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$25000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -158,7 +160,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.48.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$13000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -167,7 +169,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.49.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$12000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -176,7 +178,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.50.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">13000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -185,7 +187,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.53.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$9000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -194,7 +196,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.56.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$9000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -203,7 +205,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.11.57.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$14000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -212,7 +214,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.01.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$14000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -221,7 +223,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.13.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$9000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -230,7 +232,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.23.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$12000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -239,7 +241,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.25.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$9000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -248,7 +250,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.26.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$9000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -257,7 +259,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.27.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$9000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -266,7 +268,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.28.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$13000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -275,7 +277,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.29.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$13000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -284,7 +286,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.30.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$13000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -293,7 +295,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.32.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$12000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -302,7 +304,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.33.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$12000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -311,7 +313,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.34.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$10000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -320,7 +322,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.35.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$10000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -329,7 +331,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.40.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$10000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -338,7 +340,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.50.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$10000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -347,7 +349,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.51 (1).jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$25000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -356,7 +358,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.51.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$12000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
@@ -364,7 +366,7 @@
           <div class="card">
             <img src="assets/img/WhatsApp Image 2024-04-29 at 09.12.56.jpeg" class="card-img-top"  width="250px" height="250px" alt="...">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">$25000</p>
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
